# llm-trial

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/graph_transformer/config/: config.py
trials/: count.py  input_ids_to_graph.py  modify_model_file_weigths_name.py  ms_run_xnli.py  prepare_data.py  stopwords.py  sub_sparse_graph.py  subgraph.py  torch_apply.py  try_bert.py  try_distilbert.py  try_minilm.py  try_mps.py  try_to_device.py  try_vgcn_bert.py  try_vgcn_bert_modeling_graph.py  try_vgcn_bert_predefined_graph.py  try_vgcn_bert_tokenizer.py
trials/vgcn_bert/: all_vgcn_bert_weight_name.md  load_vb.py  notes.md  old_train_bert.py  old_train_vgcn_bert.py  standard_call_hub_vgcn_bert.py  standard_call_vgcn_bert.py  test_db_plus_graph_with_cola.py  train2.py  train3.py  train_cola.py  train_cola2.py
